# gitChecker

./: .gitignore  Cargo.toml  LICENSE  README.md
clients/menubar/: Package.swift  README.md  package-app.sh
clients/menubar/Sources/GitCheckerBar/: AppModel.swift  GitCheckerBarApp.swift  LoginItem.swift  MenuContent.swift  Models.swift  TerminalLauncher.swift
clients/wingitchecker/: AppModel.cs  IconRenderer.cs  Models.cs  PanelForm.cs  Program.cs  README.md  TerminalLauncher.cs  TrayApp.cs  WinGitChecker.csproj  build.ps1
src/: api.rs  config.rs  db.rs  fetch.rs  main.rs  model.rs  scan.rs  service.rs  status.rs
