[package]
name = "gitchecker"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local service that periodically reports the status of your git repositories over HTTP"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
directories = "6.0.0"
git2 = "0.21.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", default-features = false, features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
walkdir = "2.5.0"

# Windows-only: lets the binary run under the Service Control Manager when
# launched as `gitchecker.exe --service` (see src/service.rs).
[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
